fixed font size to be more readable

--- a/src/style.scss
+++ b/src/style.scss
@@ -381,12 +381,12 @@ $Secondary-Color:black;
     }
 
     .about-me-content {
-        font-size: xx-large;
+        font-size: 40px;
     }
 
     .service-box {
         flex-direction: column-reverse;
-        margin-top: 2725px;
+        margin-top: 3150px;
     }
 
     .service-container {
@@ -398,7 +398,7 @@ $Secondary-Color:black;
     }
 
     .service-content {
-        font-size: xx-large;
+        font-size: 40px;
     }
 
     .service-img {
@@ -410,7 +410,7 @@ $Secondary-Color:black;
     }
 
     .testimonial-card p {
-        font-size: xx-large;
+        font-size: 40px;
     }
 
     .testimonial-img {
